2011-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-browse-url-http-get): Fix typo.

2011-12-11 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-system-info-os-insert): New.
	(tinydebian-bug-report-mail-insert-details): Use
	`tinydebian-bug-system-info-os-insert'.

	* tiny/tinymail.el (tinymail-iso8601-date-value): Delete
	empty newlines

2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el: Change all variable names from *-:*
	to *--*.
	(tinylisp-find-function-list): Clean EOL whitespaces.

	* tiny/tinydesk.el (tinydesk-mark-region): Skip
	over comment lines. Corrects infinite loop.

2011-12-04 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk--save-exclude-regexp): Add Backup
	files that match regexp "[~#]$".

2011-12-01 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk--save-title): Remove extra line.
	(tinydesk-install-default-keybindings): Adjust comments.
	(tinydesk--recover-mark-problem-lines): New user variable.
	(tinydesk-recover-state): Use `tinydesk--recover-mark-problem-lines'.

2011-11-22 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytab.el (wizard): Define backtab in non-window system.
	E.g. for Putty terminal.

2011-11-18 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyreplace.el (tinyreplace-define-keys-local-map): Rename
	from `tinyreplace-define-keys-compile-map'.

2011-11-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymailbox.el (tinymailbox--header-begin-regexp):
	Rename from `tinymailbox:-header-begin-regexp'.

	* tiny/tinypath.el (tinypath-cache-display): Correct docstring
	variable name `tinypath--cache'.

	* tiny/tinyurl.el (tinyurl-dispatcher-1): correct message to
	announce `tinyurl--validate-hook"'.

2011-09-20 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string):
	Add Debian bug URL detection. Tighten plain number regexp not
	to match YYYY-MM-DD
